welcome.lessons.welcome.traversal.diagonal.TraversalDiagonal.scala.error
Diagonal:23: error: ';' expected but ',' found.
  if (getY()==getMondeHauteur()-diag-1 && getX()==getMondeLargeur()-1) {diag+=1;setPos(getMondeHauteur()-1),diag} 
                                                                                                           ^